# agentia

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  logging.toml  pyproject.toml  setup.sh
.claude/: .gitignore
.claude/skills/agentia-usage/: SKILL.md
.claude/skills/gemini-live-api-dev/: SKILL.md
.github/workflows/: tests.yml  type-check.yml
agentia/: __init__.py  agent.py  chat_completion.py  decorators.py  history.py  knowledge_base.py  live.py  main.py  mcp.py  message.py  realtime.py  run.py  tools.py
agentia-app/: README.md  compose.override.yaml  pyproject.toml
agentia-app/agentia_app/: api.py  main copy.py  main.py
agentia-app/agentia_app/plugins/: __init__.py  gmail.py  mstodo.py
agentia-app/agentia_app/utils/: __init__.py  chat.py
agentia-app/agentia_app/web/: 1_chat.py  2_dashboard.py
agentia-app/docker/: Dockerfile  start
agentia/_api/: __init__.py
agentia/_app/: 1_chat.py  1_💬_Chat.py  2_dashboard.py  app.py
agentia/_app/pages/: 2_⚙️_Dashboard.py
agentia/_app/utils/: __init__.py  chat.py  oauth.py
agentia/llm/: __init__.py  agentic.py  completion.py  deepseek.py  google.py  openai.py  openrouter.py  react.py  stream.py  tools.py
agentia/llm/providers/: __init__.py  _openai_api.py  chutes.py  cloudflare.py  fireworks.py  gateway.py  gemini_live.py  ollama.py  openai.py  openrouter.py  qwen.py  vercel.py
agentia/models/: base.py  chat.py  live.py  stream.py
agentia/plugins/: __init__.py  bash.py  calc.py  clock.py  code.py  code_runner.py  dalle.py  gmail.py  memory.py  mstodo.py  search.py  skill_learner.py  skills.py  system.py  vision.py  web.py
agentia/plugins/knowledge_base/: __init__.py  knowledge_base.py  vector_store.py
agentia/spec/: __init__.py  base.py  chat.py  live.py  prompt.py  stream.py  stream_part.py
agentia/tools/: __init__.py  markdown.py  mcp.py  plugin.py  tools.py
agentia/utils/: __init__.py  aec.py  commands.py  compact.py  config.py  decorators.py  event_emitter.py  image_scaling.py  markdown.py  patches.py  repl.py  session.py  skill_learner.py  voice.py
agentia/utils/app/: 1_💬_Chat.py  app.py  utils.py
agentia/utils/app/pages/: 2_⚙️_Dashboard.py
agentia/utils/app/utils/: __init__.py  oauth.py
agentia/x/: agent.py
docker/: Dockerfile  nginx.conf  start  start.sh
docs/: usage.md
examples/: basic.ipynb  example-agent.toml  example.ipynb  live.py  magic.ipynb  mcp.ipynb  plugins.ipynb  reasoning.ipynb  skills.ipynb  structured-response.ipynb  user-consent.ipynb  vision.ipynb  wordle.py
examples/weather-skill/: SKILL.md
examples/weather-skill/scripts/: get-weather.py
tests/: test_commands.py  test_compact.py  test_completion.py  test_config.py  test_current_tokens.py  test_events.py  test_live.py  test_magic.py  test_markdown.py  test_mcp.py  test_metadata.py  test_plugin.py  test_provider.py  test_reasoning.py  test_skills.py  test_stream.py  test_subagents.py  test_tools.py  test_tools_async.py  test_user_consent.py  test_vision.py
