[project]
name = "agentia"
version = "0.1.20"
description = "Ergonomic LLM Agents"
authors = [{ name = "Wenyu Zhao", email = "wenyuzhaox@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "chatgpt",
    "gpt",
    "llm",
    "agent",
    "tools",
    "openai",
    "openrouter",
    "ai-sdk",
    "skills",
    "mcp",
]
dependencies = [
    "fastmcp>=2.14.5",
    "filelock>=3.18.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.108.1,<2",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.0,<2",
    "python-frontmatter>=1.1.0",
    "markdownify>=1.2.2",
    "tavily-python>=0.7.21",
]

[project.urls]
Repository = "https://github.com/wenyuzhao/agentia"

[project.optional-dependencies]
all = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.361,<2",
    "pytest>=7.3.2,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "pyyaml>=6.0.3",
    "streamlit>=1.52.2",
]

[tool.hatch.build.targets.sdist]
include = ["agentia"]

[tool.hatch.build.targets.wheel]
include = ["agentia"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
